fixed grid gap

--- a/mayoral-challenge/mayoral/styles/Home.module.css
+++ b/mayoral-challenge/mayoral/styles/Home.module.css
@@ -1,29 +1,29 @@
 .cardListPlus {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 0px;
-  row-gap: 0px;
+  grid-template-columns: 200px 200px 200px 200px;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
 .cardListMinus {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 0px;
-  row-gap: 0px;
+  grid-template-columns: 200px 200px 200px;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
 @media (max-width: 600px) {
   .cardListPlus {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 0px;
-    row-gap: 0px;
+    grid-template-columns: 200px 200px 200px 200px;
+    column-gap: 20px;
+    row-gap: 20px;
   }
 
   .cardListMinus {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 0px;
-    row-gap: 0px;
+    grid-template-columns: 200px 200px;
+    column-gap: 20px;
+    row-gap: 20px;
   }
 }
